--- a/react-app/src/components/Feed/Feed.css
+++ b/react-app/src/components/Feed/Feed.css
@@ -52,10 +52,12 @@
     background-color: red;
     color: white;
     border-radius: 50%;
-    font-size: 20px;
+    font-size: 12px;
+    padding: 4px 6px;
     font-weight: 800;
     text-align: center;
     text-align: center;
+    margin-left: 5px;
 }
 
 .delete--button:hover {
